welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:2: error: ')' expected but '<-' found.
	foir(i<- 1 to 4){ 
              ^