welcome.lessons.welcome.methods.picture.PictureMono.scala.code
override def run() {
	foir(i<- 1 to 4){ 
	avance
	baisseBrosse
	leveBrosse
	avance
	gauche
	avance
	baisseBrosse
	leveBrosse
	recule
	droite
	avance
	baisseBrosse
	leveBrosse
	avance 
	gauche}
	
}
